feat(order-repository): add SaveOrderDetail repository
